Day call to saveCurrentConfig() to prevent crash in case of multiple events

This can happen in VirtualBox for instance, where resizing window emits
a lot of XRandR events which causes inconsistancies in configs.

REVIEW: 110930
BUG: 319878
FIXED-IN: 1.0